# cookiecutter-clion-c-mpi-hpc-unitn

./: TODO.txt  cookiecutter.json
{{cookiecutter.project_name}}/: CMakeLists.txt  README.md
{{cookiecutter.project_name}}/include/: debug.h
{{cookiecutter.project_name}}/pbs/: job.config  run.pbs
{{cookiecutter.project_name}}/pbs/helpers/: lastError.sh  lastOutput.sh  lastStat.sh  startup.sh
{{cookiecutter.project_name}}/scripts/run/: local_run.sh  remote_run.sh
{{cookiecutter.project_name}}/src/: main.c
{{cookiecutter.project_name}}/{{cookiecutter._hpc_executions_dir}}/: job.config  run.pbs
{{cookiecutter.project_name}}/{{cookiecutter._scripts_dir}}/hpc_helpers/: lastError.sh  lastOutput.sh  lastStat.sh  startup.sh
{{cookiecutter.project_name}}/{{cookiecutter._scripts_dir}}/run/: local_run.sh  remote_run.sh
{{cookiecutter.project_name}}/{{cookiecutter._src_dir}}/: main.c
